# LinkRag-Eval

./: .env.eval.example  .gitignore  .importlinter  AGENTS.md  README.md  alembic.ini  pyproject.toml
.ai/prompts/: project.md
alembic/: env.py
docs/: CURRENT_STATUS.md  DOCUMENT_CATALOG.md  HANDOFF.md  README.md
linkrag_eval/: __init__.py  cli.py  config.py
scripts/: analyze_balanced_route_results.py  analyze_balanced_tune_segments.py  analyze_candidate_coverage.py  analyze_query_route_segments.py  build_balanced_final_golden.py  build_ltr_blind_exposure_manifest.py  build_ltr_candidate_feature_report.py  build_report_index.py  export_ltr_candidate_contents.py  finalize_grounded_validation.py  finalize_ltr_blind_v2.py  finalize_ltr_query_expansion_2000.py  freeze_ltr_tune_config.py  inject_grounded_validation_targets.py  merge_ltr_query_rounds.py  optimize_candidate_coverage.py  optimize_ltr_hybrid_protection.py  prepare_balanced_query_extension.py  prepare_grounded_exact_extension.py  prepare_grounded_exact_targets.py  prepare_grounded_supplement_targets.py  prepare_ltr_null_rewrite_round.py  prepare_ltr_query_blind_validation.py  prepare_ltr_query_expansion_2000.py  prepare_ltr_unused_target_rewrite_round.py  prepare_query_rewrite_benchmark.py  render_balanced_retrieval_report.py  render_candidate_routing_ltr_acceptance.py  render_ltr_2000_evaluation_report.py  render_ltr_blind_v2_report.py  render_ltr_query_expansion_progress.py  render_ltr_training_set_completion.py  render_retrieval_routing_report.py  render_scale20k_report.py  repair_ltr_golden_quality.py  (+19 more)
(+237 files in other folders)
